--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,3 +11,13 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+html,
+body,
+#app {
+    @apply h-full w-full;
+}
+
+.main_container {
+    @apply h-full w-full flex justify-center items-center bg-white dark:bg-gray-900 text-gray-900 dark:text-gray-100
+}
