--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,7 +15,7 @@
 html,
 body,
 #app {
-    @apply h-full w-full;
+    @apply h-full w-full overflow-clip;
 }
 
 .main_container {
@@ -58,7 +58,7 @@ body,
 }
 
 .message_container {
-    @apply flex items-center justify-center bg-neutral-900 dark:bg-white text-neutral-100 dark:text-neutral-900 absolute top-20 py-2 px-4 rounded-sm;
+    @apply flex items-center justify-center bg-neutral-900 dark:bg-white text-neutral-100 dark:text-neutral-900 absolute top-20 py-2 px-4 rounded-sm transition-all ease-in-out duration-300 opacity-0;
 }
 
 .message_container.error {
